Prevent markdown code blocks from overflowing their container

--- a/WebHostLib/static/styles/markdown.css
+++ b/WebHostLib/static/styles/markdown.css
@@ -124,6 +124,10 @@
     padding: 10px;
 }
 
+.markdown pre{
+    overflow-x: auto;
+}
+
 strong{
     font-family: LexendDeca-Medium, sans-serif;
     font-weight: normal;
